--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@material-ui/pickers": "3.2.10",
     "@material-ui/styles": "4.9.14",
     "axios": "^0.21.1",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
